# TicketLens

./: .dockerignore  .env.example  .env.example.dev  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
agent_config/: qc_agent.yml
data/optimized_prompts/: chat_analyzer.last.json
data/training/: qc_training_from_excel.json  sample_chat_to_improve_qc.inspection.json
docs/: DSPY_OPTIMIZATION_GUIDE.md  PRODUCTION_KAFKA_TESTING.md  QC_EVALUATION_GUIDE.md  frontend_testing.md
mcp/node/: README.md  package-lock.json  package.json
prompts/chrome_agent/: search.jinja2  verify.jinja2
prompts/frontend_tester/: navigator.jinja2  planner.jinja2
prompts/quiz_agent/: quiz_generation.jinja2
prompts/research_agent/: analysis.jinja2  planning.jinja2  summary.jinja2
scripts/: check_settings.py  convert_excel_to_dspy_training.py  evaluate_qc_results.py  optimize_dspy.py  qc_sample_data.py  read_kafka_qc_input.py  run_qc_agent_http.py  run_qc_agent_kafka.py  send_test_kafka_message.py  test_avro_serialization.py  test_production_kafka.py  test_qc_template.py
src/agent/: __init__.py  factory.py  state.py
src/api/: __init__.py  app.py  server.py
src/config/: __init__.py  api_config.py  app_config.py  settings.py
src/kafka/: __init__.py  avro_serializer.py  (+5 more)
tests/: test_agent_factory_middleware.py  test_factory.py  test_kafka_consumer.py  test_kafka_producer.py  test_nodes.py  test_qc_agent.py  test_qc_agent_kafka.py  test_qc_agent_with_training.py  test_qc_api.py
(+16 files in other folders)
