[project]
name = "ai-support-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "langchain>=1.1.0",
  "langchain-openai>=1.1.0",
  "langgraph>=1.0.4",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "langfuse>=3.12.1",
  "aiokafka>=0.13.0",
  "snappy>=3.2",
  "python-snappy>=0.7.3",
  "dspy>=3.1.0",
  "aiofiles>=25.1.0",
  "fastavro>=1.12.1",
  "confluent-kafka[schema-registry]>=2.3.0",
  "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# 2. Pin torch (and related libs) to use ONLY that index
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running Kafka broker (deselected by default; run with -m integration)",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyupgrade>=3.21.2",
]
